Commit de plusieurs tests