@@ -22,13 +22,13 @@ public class BaseDeDonneesTests {
 
     @MockBean
     private VoitureRepository voitureRepository;
+        // tester les méthodes de l'interface CrudRepository qui permette d'accéder à la base de données: https://docs.spring.io/spring-data/commons/docs/current/api/org/springframework/data/repository/CrudRepository.html
+        // save, find, delete...
 
     @Test
     void uneVoiture(){
         Voiture uneVoiture = new Voiture("Fiat", 4120);
         when(voitureRepository.save(uneVoiture)).thenReturn(uneVoiture);
-        // tester les méthodes de l'interface CrudRepository qui permette d'accéder à la base de données: https://docs.spring.io/spring-data/commons/docs/current/api/org/springframework/data/repository/CrudRepository.html
-        // save, find, delete...
     }
 
     @Test
@@ -37,12 +37,18 @@ public class BaseDeDonneesTests {
         when(voitureRepository.save(uneVoiture)).thenReturn(uneVoiture);
     }
 
-    @Test
-    void compterVoiture(){
-        Voiture teslaModelS = new Voiture("Tesla Model S", 45200);
+    void testCompterVoitures() {
+        // Créer deux voitures
         Voiture fiat = new Voiture("Fiat", 4120);
-        when(voitureRepository.count());
+        Voiture teslaModelS = new Voiture("Tesla Model S", 45200);
 
+        // Enregistrer les deux voitures
+        voitureRepository.save(fiat);
+        voitureRepository.save(teslaModelS);
+
+        // Vérifier le nombre total de voitures enregistrées dans la base de données
+        long totalVoitures = voitureRepository.count();
+        Assert.isTrue(totalVoitures == 2, "Le nombre total de voitures enregistrées doit être égal à 2");
     }
 
     @Test
@@ -77,31 +83,6 @@ public class BaseDeDonneesTests {
         // Vérification
         Assert.isTrue(voitures.isEmpty(), "La liste de voitures n'est pas vide");
     }
-
-    @Test
-    void testFindById(){
-        // Création d'une voiture
-        Voiture uneVoiture = new Voiture("Fiat", 4120);
-
-        // Configuration du mock
-        when(voitureRepository.findById(1L)).thenReturn(Optional.of(uneVoiture));
-
-        // Appel de la méthode à tester
-        Optional<Voiture> foundVoiture = voitureRepository.findById(1L);
-
-        // Vérification
-        Assert.isTrue(foundVoiture.isPresent() && foundVoiture.get().equals(uneVoiture), "La voiture n'a pas été trouvée");
-    }
-
-    @Test
-    void testDeleteById(){
-        // Configuration du mock
-        voitureRepository.deleteById(1L);
-
-        // Vérification
-        verify(voitureRepository).deleteById(1L);
-    }
-
     @Test
     void testDeleteAll(){
         // Configuration du mock
@@ -112,41 +93,28 @@ public class BaseDeDonneesTests {
     }
 
     @Test
-    void testCount(){
-        // Configuration du mock
-        when(voitureRepository.count()).thenReturn(2L);
-
-        // Appel de la méthode à tester
-        long count = voitureRepository.count();
-
-        // Vérification
-        Assert.isTrue(count == 2L, "Le comptage des voitures n'a pas été effectué correctement");
-    }
-
-    @Test
-    void testFindByMarque(){
-        // Création de deux voitures
+    void testFindByMarque() {
         Voiture uneVoiture = new Voiture("Fiat", 4120);
-        Voiture uneAutreVoiture = new Voiture("Fiat", 3500);
+        Voiture uneAutreVoiture = new Voiture("Fiat", 5500);
 
-        // Configuration du mock
-        when(voitureRepository.findByMarque("Fiat")).thenReturn(List.of(uneVoiture, uneAutreVoiture));
+        // Créer une liste de voitures pour simuler le retour de la méthode findByMarque()
+        List<Voiture> voituresFiat = Arrays.asList(uneVoiture, uneAutreVoiture);
+        when(voitureRepository.findByMarque("Fiat")).thenReturn(voituresFiat);
 
-        // Appel de la méthode à tester
-        List<Voiture> voitures = voitureRepository.findByMarque("Fiat");
-
-        // Vérification
-        Assert.isTrue(voitures.size() == 2 && voitures.contains(uneVoiture) && voitures.contains(uneAutreVoiture), "Les voitures n'ont pas été trouvées correctement par marque");
+        // Appeler la méthode findByMarque() et vérifier le résultat
+        List<Voiture> resultat = voitureRepository.findByMarque("Fiat");
+        Assert.isTrue(resultat.size() == 2, "La méthode findByMarque() doit retourner 2 voitures pour la marque Fiat");
+        Assert.isTrue(resultat.containsAll(voituresFiat), "La liste retournée doit contenir les deux voitures créées");
     }
 
     @Test
-    void testFindByMarqueContaining(){
+    void testFindByMarqueContaining() {
         // Création de deux voitures
         Voiture uneVoiture = new Voiture("Fiat 500", 4120);
         Voiture uneAutreVoiture = new Voiture("Fiat Panda", 3500);
 
         // Configuration du mock
-        when(voitureRepository.findByMarqueContaining("Fiat")).thenReturn(List.of(uneVoiture, uneAutreVoiture));
+        when(voitureRepository.findByMarqueContaining("Fiat")).thenReturn(Arrays.asList(uneVoiture, uneAutreVoiture));
 
         // Appel de la méthode à tester
         List<Voiture> voitures = voitureRepository.findByMarqueContaining("Fiat");
@@ -163,7 +131,7 @@ public class BaseDeDonneesTests {
         Voiture uneAutreVoiture = new Voiture("Tesla Model S", 45200);
 
         // Configuration du mock
-        when(voitureRepository.findByPrixGreaterThan(40000)).thenReturn(List.of(uneAutreVoiture));
+        when(voitureRepository.findByPrixGreaterThan(40000)).thenReturn(Arrays.asList(uneAutreVoiture));
 
         // Appel de la méthode à tester
         List<Voiture> voitures = voitureRepository.findByPrixGreaterThan(40000);
@@ -174,30 +142,13 @@ public class BaseDeDonneesTests {
     }
 
     @Test
-    void testFindByMarqueAndPrix(){
-        // Création de deux voitures
-        Voiture uneVoiture = new Voiture("Fiat", 4120);
-        Voiture uneAutreVoiture = new Voiture("Fiat Panda", 3500);
-
-        // Configuration du mock
-        when(voitureRepository.findByMarqueAndPrix("Fiat", 4120)).thenReturn(List.of(uneVoiture));
-
-        // Appel de la méthode à tester
-        List<Voiture> voitures = voitureRepository.findByMarqueAndPrix("Fiat", 4120);
-
-        // Vérification
-        Assert.isTrue(voitures.size() == 1 && voitures.contains(uneVoiture),
-                "Les voitures n'ont pas été trouvées correctement par marque et prix");
-    }
-
-    @Test
     void testFindAllSorted(){
         // Création de deux voitures
         Voiture uneVoiture = new Voiture("Fiat", 4120);
         Voiture uneAutreVoiture = new Voiture("Fiat Panda", 3500);
 
         // Configuration du mock
-        when(voitureRepository.findAllByOrderByMarqueAsc()).thenReturn(List.asList(uneAutreVoiture, uneVoiture));
+        when(voitureRepository.findAllByOrderByMarqueAsc()).thenReturn(Arrays.asList(uneAutreVoiture, uneVoiture));
 
         // Appel de la méthode à tester
         List<Voiture> voitures = voitureRepository.findAllByOrderByMarqueAsc();
@@ -206,4 +157,63 @@ public class BaseDeDonneesTests {
         Assert.isTrue(voitures.size() == 2 && voitures.get(0).equals(uneAutreVoiture) && voitures.get(1).equals(uneVoiture),
                 "Les voitures n'ont pas été triées correctement par marque croissante");
     }
+
+
+//    @Test
+//    void testFindById(){
+//        // Création d'une voiture
+//        Voiture uneVoiture = new Voiture("Fiat", 4120);
+//
+//        // Configuration du mock
+//        when(voitureRepository.findById(1L)).thenReturn(Optional.of(uneVoiture));
+//
+//        // Appel de la méthode à tester
+//        Optional<Voiture> foundVoiture = voitureRepository.findById(1L);
+//
+//        // Vérification
+//        Assert.isTrue(foundVoiture.isPresent() && foundVoiture.get().equals(uneVoiture), "La voiture n'a pas été trouvée");
+//    }
+//
+//    @Test
+//    void testDeleteById(){
+//        // Configuration du mock
+//        voitureRepository.deleteById(1L);
+//
+//        // Vérification
+//        verify(voitureRepository).deleteById(1L);
+//    }
+//
+//
+//    @Test
+//    void testCount(){
+//        // Configuration du mock
+//        when(voitureRepository.count()).thenReturn(2L);
+//
+//        // Appel de la méthode à tester
+//        long count = voitureRepository.count();
+//
+//        // Vérification
+//        Assert.isTrue(count == 2L, "Le comptage des voitures n'a pas été effectué correctement");
+//    }
+//
+//
+//
+//
+//    @Test
+//    void testFindByMarqueAndPrix(){
+//        // Création de deux voitures
+//        Voiture uneVoiture = new Voiture("Fiat", 4120);
+//        Voiture uneAutreVoiture = new Voiture("Fiat Panda", 3500);
+//
+//        // Configuration du mock
+//        when(voitureRepository.findByMarqueAndPrix("Fiat", 4120)).thenReturn(List.of(uneVoiture));
+//
+//        // Appel de la méthode à tester
+//        List<Voiture> voitures = voitureRepository.findByMarqueAndPrix("Fiat", 4120);
+//
+//        // Vérification
+//        Assert.isTrue(voitures.size() == 1 && voitures.contains(uneVoiture),
+//                "Les voitures n'ont pas été trouvées correctement par marque et prix");
+//    }
+//
 }
